--- a/404.html
+++ b/404.html
@@ -1,5 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <title>test</title>
+    <style>
+      h1 {
+        color: #999999;
+      }
+    </style>
+  </head>
   <body>
     <h1>I think you're lost</h1>
   </body>
