--- a/404.html
+++ b/404.html
@@ -4,12 +4,18 @@
     <title>test</title>
     <style>
       h1 {
-        text-align: center;
         color: #999999;
+      }
+      
+      div {
+        border-style: outset;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1>I think you're lost</h1>
+    <div>
+     <h1>I think you're lost</h1>
+    </div>
   </body>
 </html>
