--- a/404.html
+++ b/404.html
@@ -4,11 +4,12 @@
     <title>test</title>
     <style>
       h1 {
-        color: #999999;
+        color: #555555;
       }
       
       div {
         border-style: outset;
+        background-color: #999999;
         text-align: center;
       }
     </style>
