--- a/404.html
+++ b/404.html
@@ -17,6 +17,7 @@
   <body>
     <div>
      <h1>I think you're lost</h1>
+      <h3>Please go to <a href="https://scraft161.github.io/gh-pages/">the home page</a></h3>
     </div>
   </body>
 </html>
