--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <title>test</title>
     <style>
       h1 {
-        color: #555555;
+        color: #333333;
       }
       
       div {
         border-style: outset;
-        background-color: #999999;
+        background-color: #aaaaaa;
         text-align: center;
       }
     </style>
@@ -17,7 +17,7 @@
   <body>
     <div>
      <h1>I think you're lost</h1>
-      <h3>Please go to <a href="https://scraft161.github.io/gh-pages/">the home page</a></h3>
+     <h3>Please go to <a href="https://scraft161.github.io/gh-pages/">the home page</a></h3>
     </div>
   </body>
 </html>
