--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <title>test</title>
     <style>
       h1 {
-        color: #333333;
+        color: #030303;
       }
       
       div {
         border-style: outset;
-        background-color: #aaaaaa;
+        background-color: #f1f1f1;
         text-align: center;
       }
     </style>
