--- a/404.html
+++ b/404.html
@@ -9,14 +9,13 @@
       }
       
       div {
+        float: left;
         border-style: outset;
         background-color: #f1f1f1;
         text-align: center;
       }
       
       canvas {
-        position: sticky;
-        bottom: 0;
         border:1px solid #d3d3d3;
         background-color: #f1f1f1;
       }
