--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
       
       div {
         float: left;
+        width: 50%;
         border-style: outset;
         background-color: #f1f1f1;
         text-align: center;
