--- a/404.html
+++ b/404.html
@@ -24,8 +24,9 @@
   </head>
   <body onload="startGame()">
      <div>
-     <h1>I think you're lost</h1>
-     <h3>Please go to <a href="https://scraft161.github.io/gh-pages/">the home page</a></h3>
+      <h1>I think you're lost</h1>
+      <h3>Please go to <a href="https://scraft161.github.io/gh-pages/">the home page</a></h3>
+      <p>Alternatively you can play this game to kill some time</p>
     </div>
     <script>
 var myGamePiece;
