--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <title>Home</title>
   </head>
   <body>
-    <h1 class="title">test</h1>
+    <div class="title">
+      <h1 class="title">test</h1>
+    </div>
   </body>
 </html>
