--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="title">
-      <h1 class="title">test</h1>
+      <h1>test</h1>
     </div>
   </body>
 </html>
